fix: compile with linux